[gd_scene load_steps=7 format=2]

[ext_resource path="res://ChallengeGame/LostGUI/lostGUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Textures/homeButton.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/tryAgainButton.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
shadow_color = Color( 0, 0, 0, 0.196078 )
shadow_size = 20

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[node name="lostGUICanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="lostGUIMain" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 600.0
margin_right = 350.0
margin_bottom = 1300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lostGUIPanel" type="Panel" parent="lostGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vSplitter" type="VBoxContainer" parent="lostGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="betterLuckLabel" type="Label" parent="lostGUIMain/vSplitter"]
margin_right = 700.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="buttonSplitter" type="HBoxContainer" parent="lostGUIMain/vSplitter"]
margin_top = 352.0
margin_right = 700.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="homeButtonMargin" type="MarginContainer" parent="lostGUIMain/vSplitter/buttonSplitter"]
margin_right = 348.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="homeButton" type="TextureButton" parent="lostGUIMain/vSplitter/buttonSplitter/homeButtonMargin"]
margin_left = 60.0
margin_top = 60.0
margin_right = 288.0
margin_bottom = 288.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="tryAgainButtonMargin" type="MarginContainer" parent="lostGUIMain/vSplitter/buttonSplitter"]
margin_left = 352.0
margin_right = 700.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="tryAgainButton" type="TextureButton" parent="lostGUIMain/vSplitter/buttonSplitter/tryAgainButtonMargin"]
margin_left = 60.0
margin_top = 60.0
margin_right = 288.0
margin_bottom = 288.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="lostGUITween" type="Tween" parent="."]

[connection signal="pressed" from="lostGUIMain/vSplitter/buttonSplitter/homeButtonMargin/homeButton" to="." method="_on_homeButton_pressed"]
[connection signal="pressed" from="lostGUIMain/vSplitter/buttonSplitter/tryAgainButtonMargin/tryAgainButton" to="." method="_on_tryAgainButton_pressed"]
